# cmake-cpp-template

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md
src/: CMakeLists.txt  main.cpp
